Styles the first step (selecting a type)
* Creates the action-bar component
* Creates the card-list component
* Creates the page-creation layout
* Add new modifiers to the button component

--- a/app/assets/stylesheets/admin/application.scss
+++ b/app/assets/stylesheets/admin/application.scss
@@ -3,6 +3,6 @@
 'bootstrap',
 'settings',
 '../base',
-'../layouts/*',
+'../layouts/admin/*',
 '../components/shared/**/*',
 '../components/admin/**/*';
