--- a/app/assets/stylesheets/components/management/c-button.scss
+++ b/app/assets/stylesheets/components/management/c-button.scss
@@ -10,4 +10,13 @@
   &.-outline {
     background: transparent;
   }
+
+  &.-dark-text {
+    color: $color-4;
+  }
+
+  &.-disabled {
+    cursor: default;
+    opacity: .3;
+  }
 }
