--- a/app/assets/stylesheets/front/application-theme-fa.scss
+++ b/app/assets/stylesheets/front/application-theme-fa.scss
@@ -3,6 +3,6 @@
 'icons',
 'settings-theme-fa',
 'base-theme-fa',
-'../layouts/*',
+'../layouts/front/*',
 '../components/shared/**/*',
 '../components/front/**/*';
