--- a/app/assets/stylesheets/management/application.scss
+++ b/app/assets/stylesheets/management/application.scss
@@ -4,6 +4,6 @@
 'sir-trevor',
 'settings',
 '../base',
-'../layouts/*',
+'../layouts/management/*',
 '../components/shared/**/*',
 '../components/management/**/*';
