Add static page content type

--- a/app/views/front/_footer.html.erb
+++ b/app/views/front/_footer.html.erb
@@ -1,9 +1,9 @@
 <footer class="c-footer">
   <div class="wrapper">
     <ul class="site-links-list">
-      <li class="site-link-item"><%= link_to 'Terms of Service', map_path, class: 'site-link' %></li>
+      <li class="site-link-item"><%= link_to 'Terms of Service', 'terms-and-privacy', class: 'site-link' %></li>
       <li class="separator"> | </li>
-      <li class="site-link-item"><%= link_to 'Contact us', data_path, class: 'site-link' %></li>
+      <li class="site-link-item"><%= link_to 'Contact us', nil, class: 'site-link' %></li>
     </ul>
 
     <div class="share">
