--- a/app/assets/javascripts/templates/admin/urls.hbs
+++ b/app/assets/javascripts/templates/admin/urls.hbs
@@ -1,12 +1,12 @@
 <ul class="c-url-colors">
     {{#each urls}}
         <li>
-            <input type="text" value="{{url}}" placeholder="https://www.my-site.com" data-id="{{@index}}" name="{{inputName}}[{{@index}}][value]">
+            <input type="text" value="{{url}}" placeholder="https://www.my-site.com" data-id="{{@index}}" name="{{inputName}}[{{@index}}][host]">
             <button type="button" class="js-remove-url" data-id="{{@index}}">Remove Url</button>
         </li>
     {{/each}}
     <li>
-        <input type="text" value="" placeholder="Site's URL" name="{{inputName}}[{{urls.size}}][value]">
+        <input type="text" value="" placeholder="https://www.my-site.com" name="{{inputName}}[{{urls.length}}][host]">
     </li>
     <li>
         <button type="button" class="js-add-url">ADD URL</button>
