Removed consoles in production environment

--- a/app/views/admin/site_users/_form.html.erb
+++ b/app/views/admin/site_users/_form.html.erb
@@ -9,4 +9,4 @@
     <%= render partial: 'admin/sites/footer', locals: { f: f , submit_text: 'CREATE', home: false} %>
 <% end %>
 
-<%= console %>
+<%= console if Rails.env.development? %>
