--- a/app/views/admin/sites/_form.html.erb
+++ b/app/views/admin/sites/_form.html.erb
@@ -16,4 +16,4 @@
     <%= render partial: 'footer', locals: { f: f , submit_text: 'CREATE', home: false} %>
 <% end %>
 
-<%= console %>
+<%= console if Rails.env.development? %>
