--- a/app/views/admin/sites/index.html.erb
+++ b/app/views/admin/sites/index.html.erb
@@ -26,4 +26,4 @@
 
 <%= link_to 'New Site', new_admin_site_path, class: 'btn btn-primary' %>
 
-<%= console %>
+<%= console if Rails.env.development? %>
