--- a/app/views/management/site_pages/forms/_analysis_dashboard.html.erb
+++ b/app/views/management/site_pages/forms/_analysis_dashboard.html.erb
@@ -1,1 +1,13 @@
+<% content_for :extended_header do %>
+  <div class="c-extended-header -high">
+    <div class="wrapper">
+      <div class="description">
+        <h1>Analysis Dashboard</h1>
+        <p>Please come back later to create one.</p>
+      </div>
+      <div></div>
+    </div>
+  </div>
+<% end %>
+
 <h2>Coming soon...</h2>
