--- a/app/views/management/site_pages/forms/_link.html.erb
+++ b/app/views/management/site_pages/forms/_link.html.erb
@@ -1,3 +1,15 @@
+<% content_for :extended_header do %>
+  <div class="c-extended-header -high">
+    <div class="wrapper">
+      <div class="description">
+        <h1>External link</h1>
+        <p>Please give the link the name to appear in the menu.</p>
+      </div>
+      <div></div>
+    </div>
+  </div>
+<% end %>
+
 <%= form_for(form_for_path) do |f| %>
     <% if site_page.errors.any? %>
         <div id="error_explanation">
