--- a/app/views/management/site_pages/forms/_open_content.html.erb
+++ b/app/views/management/site_pages/forms/_open_content.html.erb
@@ -1,3 +1,15 @@
+<% content_for :extended_header do %>
+  <div class="c-extended-header -high">
+    <div class="wrapper">
+      <div class="description">
+        <h1>Open Content</h1>
+        <p>Fill in the page's title, description and URI and start writing its content.</p>
+      </div>
+      <div></div>
+    </div>
+  </div>
+<% end %>
+
 <div class="l-page-creation -wysiwyg">
   <%= form_for(form_for_path, :html => { :class => 'js-form' }) do |f| %>
       <% if site_page.errors.any? %>
