--- a/app/views/management/site_pages/forms/_select_type.html.erb
+++ b/app/views/management/site_pages/forms/_select_type.html.erb
@@ -1,3 +1,15 @@
+<% content_for :extended_header do %>
+  <div class="c-extended-header -high">
+    <div class="wrapper">
+      <div class="description">
+        <h1>Page creation</h1>
+        <p>Please choose which type of page you want to create.</p>
+      </div>
+      <div></div>
+    </div>
+  </div>
+<% end %>
+
 <div class="l-page-creation -type">
   <div class="wrapper">
     <div class="c-card-list">
