--- a/app/views/management/site_pages/forms/_link.html.erb
+++ b/app/views/management/site_pages/forms/_link.html.erb
@@ -10,42 +10,32 @@
   </div>
 <% end %>
 
-<%= form_for(form_for_path) do |f| %>
+<div class="l-page-creation -link">
+  <%= form_for(form_for_path, :html => { :class => 'js-form' }) do |f| %>
     <% if site_page.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(site_page.errors.count, "error") %> prohibited this site_page from being saved:</h2>
+      <div id="error_explanation">
+        <h2><%= pluralize(site_page.errors.count, "error") %> prohibited this site_page from being saved:</h2>
 
-          <ul>
-            <% site_page.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-          </ul>
-        </div>
+        <ul>
+          <% site_page.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
     <% end %>
 
     <%= f.hidden_field :content_type %>
 
-    <fieldset class="form-group row">
-      <%= f.label :name, class: 'col-sm-2 form-control-label' %>
-      <div class="col-sm-10"><%= f.text_field :name, class: 'form-control' %></div>
-    </fieldset>
-
-    <fieldset class="form-group row">
-      <%= f.label 'Target Link', class: 'col-sm-2 form-control-label' %>
-      <div class="col-sm-10">
-        <div class="c-content">
-          <%= f.fields_for :content, OpenStruct.new(f.object.content) do |ff| %>
-              <%= ff.text_field :url, class: 'form-control' %>
-          <% end %>
-        </div>
-      </div>
-    </fieldset>
-
-    <div class="form-group row">
-      <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit class: 'js-submit btn btn-primary' %>
-        <%= link_to 'Show', management_site_page_path(site_page), class: 'btn btn-secondary' unless site_page.id.nil? %>
-        <%= link_to 'Back', {controller: 'management/site_pages', action: 'index', site_slug: @site.slug}, class: 'btn btn-secondary' %>
-      </div>
+    <div class="wrapper">
+      <%= f.text_field :name, class: 'c-input', placeholder: 'Link\'s name' %>
+      <%= f.fields_for :content, OpenStruct.new(f.object.content) do |ff| %>
+          <%= ff.text_field :url, class: 'c-input', placeholder: 'URL' %>
+      <% end %>
     </div>
+  <% end %>
+</div>
+
+<% content_for :action_bar do %>
+  <%= link_to 'Cancel', {controller: 'management/site_pages', action: 'index', site_slug: @site.slug}, class: 'c-button -outline -dark-text' %>
+  <button type="submit" class="c-button js-submit">Create</button>
 <% end %>
