Adds basic styles to the other page types

--- a/app/assets/stylesheets/components/shared/c-input.scss
+++ b/app/assets/stylesheets/components/shared/c-input.scss
@@ -3,7 +3,13 @@
   width: 100%;
   padding: 20px;
   border: 1px solid rgba($color-4, .3);
+  outline: none;
   font-size: $font-size-medium;
   text-align: center;
   box-shadow: 0 2px 3px 0 rgba($color-4, .1);
+
+  &:focus {
+    border-color: $color-1;
+    box-shadow: 0 2px 3px 0 rgba($color-1, .1);
+  }
 }
