--- a/app/assets/stylesheets/layouts/management/l-page-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-page-creation.scss
@@ -29,4 +29,14 @@
     }
   }
 
+  &.-analysis-dashboard,
+  &.-indicator-dashboard {
+    margin-top: 50px;
+
+    h2 {
+      font-size: $font-size-big;
+      text-align: center;
+    }
+  }
+
 }
