--- a/app/assets/stylesheets/components/management/c-tree-structure.scss
+++ b/app/assets/stylesheets/components/management/c-tree-structure.scss
@@ -121,6 +121,14 @@
           text-indent: -10000px; // For accessibility, the text should stay visible
         }
 
+        > .view-button-slashed {
+          display: block;
+          width: 16px;
+          height: 11px;
+          background: image-url('icons/slashed-eye-icon.svg') no-repeat center center;
+          text-indent: -10000px; // For accessibility, the text should stay visible
+        }
+
         > .edit-button {
           display: block;
           width: 16px;
