--- a/app/assets/stylesheets/components/management/c-tree-structure.scss
+++ b/app/assets/stylesheets/components/management/c-tree-structure.scss
@@ -75,6 +75,10 @@
       content: '';
     }
 
+    &.-disabled {
+      opacity: .3
+    }
+
     &.-placeholder {
       max-width: 200px;
       height: 43px; // Height of the other pages
