--- a/app/assets/stylesheets/layouts/management/l-page-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-page-creation.scss
@@ -39,4 +39,21 @@
     }
   }
 
+  &.-created {
+    display: flex;
+    align-items: center;
+    min-height: calc(100vh - 300px);
+    padding-top: 50px;
+    padding-bottom: 0;
+
+    > .wrapper {
+      text-align: center;
+
+      .c-button {
+        display: inline-block;
+        margin-bottom: 20px;
+      }
+    }
+  }
+
 }
