Feature/page creation flow (#61)
* Styles the first step (selecting a type)

* Creates the action-bar component
* Creates the card-list component
* Creates the page-creation layout
* Add new modifiers to the button component

* Updates the breadcrumbs depending on the page type

* Gives basic styles to the step 2

* By default, show a title and an introduction in the wysiwyg
* Gives basic styles to the inputs (will be moved later)

* Sets different contents for the extended header

* Styles the link creation

* Adds basic styles to the other page types

* Removes the Lorem Ipsums for the type selection

* Styles the "created" page

* Improves the inputs for the edition page

--- a/app/views/management/site_pages/forms/_link.html.erb
+++ b/app/views/management/site_pages/forms/_link.html.erb
@@ -1,39 +1,47 @@
-<%= form_for(form_for_path) do |f| %>
-    <% if site_page.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(site_page.errors.count, "error") %> prohibited this site_page from being saved:</h2>
+<% content_for :extended_header do %>
+  <div class="c-extended-header -high">
+    <div class="wrapper">
+      <div class="description">
+        <h1>External link</h1>
+        <p>Please give the link the name to appear in the menu.</p>
+      </div>
+      <div></div>
+    </div>
+  </div>
+<% end %>
 
-          <ul>
-            <% site_page.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-          </ul>
-        </div>
+<div class="l-page-creation -link">
+  <%= form_for(form_for_path, :html => { :class => 'js-form' }) do |f| %>
+    <% if site_page.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(site_page.errors.count, "error") %> prohibited this site_page from being saved:</h2>
+
+        <ul>
+          <% site_page.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
     <% end %>
 
     <%= f.hidden_field :content_type %>
 
-    <fieldset class="form-group row">
-      <%= f.label :name, class: 'col-sm-2 form-control-label' %>
-      <div class="col-sm-10"><%= f.text_field :name, class: 'form-control' %></div>
-    </fieldset>
-
-    <fieldset class="form-group row">
-      <%= f.label 'Target Link', class: 'col-sm-2 form-control-label' %>
-      <div class="col-sm-10">
-        <div class="c-content">
-          <%= f.fields_for :content, OpenStruct.new(f.object.content) do |ff| %>
-              <%= ff.text_field :url, class: 'form-control' %>
-          <% end %>
-        </div>
+    <div class="wrapper">
+      <div class="c-fieldset">
+        <%= f.text_field :name, placeholder: 'Link\'s name', id: 'name' %>
+        <%= f.label 'Link\'s name', for: 'name' %>
       </div>
-    </fieldset>
-
-    <div class="form-group row">
-      <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit class: 'js-submit btn btn-primary' %>
-        <%= link_to 'Show', management_site_page_path(site_page), class: 'btn btn-secondary' unless site_page.id.nil? %>
-        <%= link_to 'Back', {controller: 'management/site_pages', action: 'index', site_slug: @site.slug}, class: 'btn btn-secondary' %>
+      <div class="c-fieldset">
+        <%= f.fields_for :content, OpenStruct.new(f.object.content) do |ff| %>
+            <%= ff.text_field :url, placeholder: 'URL', id: 'url' %>
+            <%= ff.label 'URL', for: 'url' %>
+        <% end %>
       </div>
     </div>
+  <% end %>
+</div>
+
+<% content_for :action_bar do %>
+  <%= link_to 'Cancel', {controller: 'management/site_pages', action: 'index', site_slug: @site.slug}, class: 'c-button -outline -dark-text' %>
+  <button type="submit" class="c-button js-submit"><%= (!defined? edit || edit == false) ? 'Create' : 'Update' %></button>
 <% end %>
