--- a/app/assets/stylesheets/components/management/c-button.scss
+++ b/app/assets/stylesheets/components/management/c-button.scss
@@ -4,10 +4,20 @@
   border-radius: 20px;
   background: $color-10;
   color: $color-3;
+  font-size: $font-size-normal; // Mandatory for button.c-button
   font-weight: $font-weight-bold;
   text-transform: uppercase;
 
   &.-outline {
     background: transparent;
+  }
+
+  &.-dark-text {
+    color: $color-4;
+  }
+
+  &.-disabled {
+    cursor: default;
+    opacity: .3;
   }
 }
