--- a/app/views/management/site_pages/forms/_open_content.html.erb
+++ b/app/views/management/site_pages/forms/_open_content.html.erb
@@ -1,36 +1,46 @@
-<%= form_for(form_for_path) do |f| %>
-    <% if site_page.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(site_page.errors.count, "error") %> prohibited this site_page from being saved:</h2>
+<% content_for :extended_header do %>
+  <div class="c-extended-header -high">
+    <div class="wrapper">
+      <div class="description">
+        <h1>Open Content</h1>
+        <p>Fill in the page's title, description and URI and start writing its content.</p>
+      </div>
+      <div></div>
+    </div>
+  </div>
+<% end %>
 
-          <ul>
-            <% site_page.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-          </ul>
+<div class="l-page-creation -wysiwyg">
+  <%= form_for(form_for_path, :html => { :class => 'js-form' }) do |f| %>
+      <% if site_page.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(site_page.errors.count, "error") %> prohibited this site_page from being saved:</h2>
+
+            <ul>
+              <% site_page.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
+      <% end %>
+
+      <%= f.hidden_field :content_type %>
+
+      <div class="wrapper">
+
+        <div class="c-fieldset">
+          <%= f.text_field :name, id: 'title', placeholder: 'Page\'s title' %>
+          <%= f.label 'Page\'s title', for: 'title' %>
         </div>
-    <% end %>
+        <div class="c-fieldset">
+          <%= f.text_field :description, id: 'description', placeholder: 'Short description' %>
+          <%= f.label 'Short description', for: 'description' %>
+        </div>
+        <div class="c-fieldset">
+          <%= f.text_field :uri, id: 'uri', placeholder: 'Page\'s URI' %>
+          <%= f.label 'Page\'s URI', for: 'uri' %>
+        </div>
 
-    <%= f.hidden_field :content_type %>
-
-    <fieldset class="form-group row">
-      <%= f.label :name, class: 'col-sm-2 form-control-label' %>
-      <div class="col-sm-10"><%= f.text_field :name, class: 'form-control' %></div>
-    </fieldset>
-
-    <fieldset class="form-group row">
-      <%= f.label :description, class: 'col-sm-2 form-control-label' %>
-      <div class="col-sm-10"><%= f.text_field :description, class: 'form-control' %></div>
-    </fieldset>
-
-    <fieldset class="form-group row">
-      <%= f.label :uri, class: 'col-sm-2 form-control-label' %>
-      <div class="col-sm-10"><%= f.text_field :uri, class: 'form-control' %></div>
-    </fieldset>
-
-    <fieldset class="form-group row">
-      <%= f.label :content, class: 'col-sm-2 form-control-label' %>
-      <div class="col-sm-10">
         <div class="c-wysiwyg">
           <%= f.fields_for :content, OpenStruct.new(site_page.content) do |ff| %>
               <%= ff.hidden_field :body, class: 'js-content' %>
@@ -38,34 +48,31 @@
           <% end %>
         </div>
       </div>
-    </fieldset>
 
-    <!--
-    <fieldset class="form-group row">
-      <%= f.label :url, class: 'col-sm-2 form-control-label' %>
-      <div class="col-sm-10"><%= f.text_field :url, class: 'form-control', disabled: 'true' %></div>
-    </fieldset>
+      <!--
+      <fieldset class="form-group row">
+        <%= f.label :url, class: 'col-sm-2 form-control-label' %>
+        <div class="col-sm-10"><%= f.text_field :url, class: 'form-control', disabled: 'true' %></div>
+      </fieldset>
 
-    <fieldset class="form-group row">
-      <%= f.label :site_id, class: 'col-sm-2 form-control-label' %>
-      <div class="col-sm-10">
-        <%= f.collection_select :site_id, Site.all, :id, :name, {}, {:class => 'form-control'} %>
-      </div>
-    </fieldset>
+      <fieldset class="form-group row">
+        <%= f.label :site_id, class: 'col-sm-2 form-control-label' %>
+        <div class="col-sm-10">
+          <%= f.collection_select :site_id, Site.all, :id, :name, {}, {:class => 'form-control'} %>
+        </div>
+      </fieldset>
 
-    <fieldset class="form-group row">
-      <%= f.label :parent_id, class: 'col-sm-2 form-control-label' %>
-      <div class="col-sm-10">
-        <%= f.collection_select :parent_id, SitePage.where(site_id: @site_page.site_id), :id, :name, {}, {:class => 'form-control'} %>
-      </div>
-    </fieldset>
-    -->
+      <fieldset class="form-group row">
+        <%= f.label :parent_id, class: 'col-sm-2 form-control-label' %>
+        <div class="col-sm-10">
+          <%= f.collection_select :parent_id, SitePage.where(site_id: @site_page.site_id), :id, :name, {}, {:class => 'form-control'} %>
+        </div>
+      </fieldset>
+      -->
+  <% end %>
+</div>
 
-    <div class="form-group row">
-      <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit class: 'js-submit btn btn-primary' %>
-        <%= link_to 'Show', management_site_page_path(site_page), class: 'btn btn-secondary' unless site_page.id.nil? %>
-        <%= link_to 'Back', {controller: 'management/site_pages', action: 'index', site_slug: @site.slug}, class: 'btn btn-secondary' %>
-      </div>
-    </div>
+<% content_for :action_bar do %>
+  <%= link_to 'Cancel', {controller: 'management/site_pages', action: 'index', site_slug: @site.slug}, class: 'c-button -outline -dark-text' %>
+  <button type="submit" class="c-button js-submit"><%= (!defined? edit || edit == false) ? 'Save' : 'Update' %></button>
 <% end %>
