Updates the links for the "Coming soon" pages
Before the user could only click on a cancel button. Now, they can click on a back button to go back to the page type selection.

--- a/app/views/management/site_pages/forms/_analysis_dashboard.html.erb
+++ b/app/views/management/site_pages/forms/_analysis_dashboard.html.erb
@@ -17,5 +17,5 @@
 </div>
 
 <% content_for :action_bar do %>
-  <%= link_to 'Cancel', {controller: 'management/site_pages', action: 'index', site_slug: @site.slug}, class: 'c-button' %>
+  <%= link_to 'Back', {controller: 'management/site_pages', action: 'new', site_slug: @site.slug}, class: 'c-button' %>
 <% end %>
