Fixes an issue with the "Update" button
The button should have been "Create" or "Save" when creating the pages, and "Update" just when editing. The issue was with a wrong condition in two rails views.

--- a/app/views/management/site_pages/forms/_link.html.erb
+++ b/app/views/management/site_pages/forms/_link.html.erb
@@ -43,5 +43,5 @@
 
 <% content_for :action_bar do %>
   <%= link_to 'Cancel', {controller: 'management/site_pages', action: 'index', site_slug: @site.slug}, class: 'c-button -outline -dark-text' %>
-  <button type="submit" class="c-button js-submit"><%= (!defined? edit || edit == false) ? 'Create' : 'Update' %></button>
+  <button type="submit" class="c-button js-submit"><%= (!defined?(edit) || edit == false) ? 'Create' : 'Update' %></button>
 <% end %>
