Adds a missing color
This prevented the login screen to appear.

--- a/app/assets/stylesheets/admin/_settings.scss
+++ b/app/assets/stylesheets/admin/_settings.scss
@@ -41,6 +41,7 @@ $color-3:  #fff;
 $color-4:  #555;
 $color-5:  #000;
 $color-6:  #333;
+$color-7:  #dededd;
 $color-8:  #ff706c;
 $color-9:  #404040;
 $color-10: darken(saturate($color-1, 10%), 5%);
