--- a/app/assets/javascripts/templates/management/site-switcher.hbs
+++ b/app/assets/javascripts/templates/management/site-switcher.hbs
@@ -1,4 +1,4 @@
-<select class="c-site-switcher" {{#if slug}}style="width: {{width}};"{{/if}}>
+<select class="c-site-switcher">
   <option value="" disabled {{#unless slug}}selected{{/unless}}>Change site</option>
   {{#each sites}}
     <option value="{{slug}}" {{#if active}}selected{{/if}}>{{name}}</option>
