--- a/app/views/management/site_pages/show.html.erb
+++ b/app/views/management/site_pages/show.html.erb
@@ -3,9 +3,9 @@
     <div class="wrapper">
       <div class="description">
         <% if @site_page.content_type == ContentType::LINK %>
-          <h1>Link created!</h1>
+          <h1>Link saved!</h1>
         <% else %>
-          <h1>Page created!</h1>
+          <h1>Page saved!</h1>
         <% end %>
         <p>What do you want to do now?</p>
       </div>
@@ -16,6 +16,7 @@
 
 <div class="l-page-creation -created">
   <div class="wrapper">
+    <%= link_to 'Edit the page', {controller: 'management/site_pages', action: 'edit', site_slug: @site_page.site.slug}, class: 'c-button' %>
     <%= link_to 'See the list of pages', {controller: 'management/site_pages', action: 'index', site_slug: @site_page.site.slug}, class: 'c-button' %>
     <br/>
     <%= link_to (@site_page.content_type == ContentType::LINK ? 'Create a new link' : 'Create a new page'), {controller: 'management/site_pages', action: 'new', site_slug: @site_page.site.slug}, class: 'c-button -outline -dark-text' %>
