Page structure is updated on change

--- a/app/views/management/sites/structure.html.erb
+++ b/app/views/management/sites/structure.html.erb
@@ -16,5 +16,5 @@
 
   <%= include_gon %>
 
-  <%= link_to 'Save', management_site_site_pages_path, class: 'btn btn-primary' %>
+  <%= link_to 'Save', '#', class: 'btn btn-primary js-submit', data: { confirm: 'Are you sure you want to save the structure?'} %>
 </div>
