Improves the enable feature

--- a/app/assets/javascripts/templates/management/tree-structure.hbs
+++ b/app/assets/javascripts/templates/management/tree-structure.hbs
@@ -7,9 +7,9 @@
           <span>{{name}}</span>
           <ul class="action-buttons">
             {{#if enabled}}
-                <li><a href="" class="view-button">View</a></li>
+                <li><a href="" class="view-button js-disable">Disable</a></li>
             {{else}}
-                <li><a href="" class="view-button-slashed">View</a></li>
+                <li><a href="" class="view-button-slashed js-enable">Enable</a></li>
             {{/if}}
             <li><a href="" class="edit-button">Edit</a></li>
             <li><a href="" class="delete-button">Delete</a></li>
