--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= yield :head %>
 </head>
 
-<body>
+<body <%= yield :body_class %>>
   <%= render 'front/menu' %>
   <%= render 'front/icons' %>
   <%= yield %>
