--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -217,7 +217,11 @@
         text-transform: uppercase;
 
         &.-active {
-          background-color: grey;
+          @if $theme == 2 {
+            background-color: rgba($color-3, .1);
+          } @else {
+            background-color: rgba($color-1, .1);
+          }
         }
 
         // If the menu has just one element (such as the lang selector), we don't want the border
