--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -1,5 +1,6 @@
 .c-header {
   position: relative;
+  font-family: $font-family-1; // Needed as the map CSS overrides it
   z-index: 5;
 
   @if $theme == 2 {
@@ -220,7 +221,8 @@
           @if $theme == 2 {
             background-color: rgba($color-3, .1);
           } @else {
-            background-color: rgba($color-1, .1);
+            background-color: rgba($color-1
+            , .1);
           }
         }
 
