--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -7,6 +7,7 @@
     color: $color-3;
   } @else {
     color: $color-1;
+    font-size: $font-size-normal;
   }
 
   a {
@@ -221,8 +222,7 @@
           @if $theme == 2 {
             background-color: rgba($color-3, .1);
           } @else {
-            background-color: rgba($color-1
-            , .1);
+            background-color: rgba($color-1, .1);
           }
         }
 
@@ -339,6 +339,15 @@
             }
           }
 
+          @if $theme == 2 {
+            &.-active {
+              > ul {
+                li:first-of-type {
+                  background-color: rgba($color-3, .1);
+                }
+              }
+            }
+          }
         }
       }
 
