--- a/app/views/management/sites/structure.html.erb
+++ b/app/views/management/sites/structure.html.erb
@@ -16,7 +16,7 @@
 
   <%= include_gon %>
 
-  <%= link_to 'Save', '#', class: 'btn btn-primary js-submit', data: { confirm: 'Are you sure you want to save the structure?'} %>
+  <%= link_to 'Save', management_site_update_structure_path(@site), class: 'btn btn-primary js-submit' %>
 </div>
 
 <%= console if Rails.env.development? %>
