--- a/app/views/management/site_pages/forms/_open_content.html.erb
+++ b/app/views/management/site_pages/forms/_open_content.html.erb
@@ -40,7 +40,7 @@
           <%= f.text_field :uri, id: 'uri', placeholder: 'Page\'s URI' %>
           <%= f.label 'Page\'s URI', for: 'uri' %>
         </div>
-        <div class="c-fieldset">
+        <div class="c-checkbox">
           <%= f.check_box :show_on_menu, id: 'show_on_menu' %>
           <%= f.label :show_on_menu, for: 'show_on_menu' %>
         </div>
