Fixes a wrong label for the static pages

--- a/app/views/management/site_pages/forms/_static_content.html.erb
+++ b/app/views/management/site_pages/forms/_static_content.html.erb
@@ -2,7 +2,7 @@
   <div class="c-extended-header -high">
     <div class="wrapper">
       <div class="description">
-        <h1>Open Content</h1>
+        <h1>Static Content</h1>
         <p>Fill in the page's title, description and URI and start writing its content.</p>
       </div>
       <div></div>
