--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -42,6 +42,10 @@ a {
   text-decoration: none;
 }
 
+input {
+  font-family: $font-family-1;
+}
+
 .wrapper {
   width: 100%;
   padding: 0 $wrapper-mobile-padding;
