Styles the page to edit the homepage

--- a/app/assets/stylesheets/layouts/management/l-page-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-page-creation.scss
@@ -30,7 +30,8 @@
   }
 
   &.-analysis-dashboard,
-  &.-indicator-dashboard {
+  &.-indicator-dashboard,
+  &.-homepage {
     margin-top: 50px;
 
     h2 {
