--- a/app/assets/stylesheets/layouts/management/l-page-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-page-creation.scss
@@ -48,10 +48,13 @@
     padding-bottom: 0;
 
     > .wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       text-align: center;
 
       .c-button {
-        display: inline-block;
+        width: 200px;
         margin-bottom: 20px;
       }
     }
