Prevents scrolling when toggling a checkbox
Because the real input was moved to the top, the browser would scroll to the top of the page. Now, it's moved to the left.

--- a/app/assets/stylesheets/components/shared/c-checkbox.scss
+++ b/app/assets/stylesheets/components/shared/c-checkbox.scss
@@ -43,7 +43,7 @@
     // For accessibility reasons (tabindex), the input cannot be just hidden
     // using display: none;
     position: absolute;
-    top: -100000px;
+    left: -100000px; // Can't change the top property otherwise the browser scrolls when the user clicks the label
     opacity: 0;
 
     &:focus {
