--- a/app/views/management/sites/structure.html.erb
+++ b/app/views/management/sites/structure.html.erb
@@ -16,5 +16,5 @@
 
   <%= include_gon %>
 
-  <%= link_to 'Save', management_site_update_structure_path(@site), class: 'btn btn-primary js-submit' %>
+  <%= link_to 'Save', management_site_update_structure_path(@site.slug), class: 'btn btn-primary js-submit' %>
 </div>
